--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -36,6 +36,11 @@
       <version>1.9.59</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.8.3</version>
+    </dependency>
   </dependencies>
 
   <build>
